syntax = "proto3";

option java_package = "com.bxc.data.rpc.gethelloworld";
option java_multiple_files = true;

message GetHelloWorldRequest{
}

message GetHelloWorldResponse {
  string message = 1;
}